[gd_scene load_steps=7 format=3 uid="uid://ebim0oxihl5g"]

[ext_resource type="Texture2D" uid="uid://ptagoqyqhcdb" path="res://enemy/textures/cobweb_moving.png" id="1_ryysw"]
[ext_resource type="Script" path="res://enemy/enemy sub nodes/spider_cobweb_attack.gd" id="1_u3jux"]
[ext_resource type="Texture2D" uid="uid://bjb02j3a4brbx" path="res://enemy/textures/cobweb_static.png" id="2_du880"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ynv1s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ryysw")
}, {
"duration": 1.0,
"texture": ExtResource("2_du880")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_agvoe"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2gray"]
radius = 36.0555

[node name="Spider_Cobweb_Attack" type="Node2D"]
script = ExtResource("1_u3jux")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ynv1s")

[node name="State0Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="State0Area"]
shape = SubResource("CircleShape2D_agvoe")

[node name="State1Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="State1Area"]
shape = SubResource("CircleShape2D_2gray")

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="State0Area" to="." method="_on_state_0_area_body_entered"]
[connection signal="body_entered" from="State1Area" to="." method="_on_state_1_area_body_entered"]
[connection signal="body_exited" from="State1Area" to="." method="_on_state_1_area_body_exited"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
